k3s/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.d-kline.org`)
      kind: Rule
      services:
        - name: n8n
          port: 80
      middlewares:
        - name: local-only
          namespace: traefik
        - name: security-headers
          namespace: traefik
  tls: {}
